Fix paragraph extra margins

--- a/app/assets/stylesheets/components/_prosemirror.scss
+++ b/app/assets/stylesheets/components/_prosemirror.scss
@@ -1,3 +1,12 @@
 .pm-content img {
   max-width: 100%;
 }
+
+.pm-content p:first-child {
+  margin-top: 0px;
+}
+
+.pm-content p:last-child {
+  margin-bottom: 0px;
+}
+
